# tutor.ia

./: .gitignore  README.md  pyproject.toml
aisrch/: .env.template  README.md  pyproject.toml  ruff.toml
aisrch/src/: main.py
aisrch/src/clients/: indexer_client.py  search_client.py
aisrch/src/config/: __init__.py  configuration.py
aisrch/src/models/: datasource_definition.py  index_definition.py  indexer_definition.py  skillset_definition.py
aisrch/src/services/: datasource_service.py  index_service.py  indexer_service.py  skillset_service.py
app/: main.py
app/api/endpoints/: conversation.py  health.py
backend/: .env.template  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: conversation.py  health.py
backend/app/api/utils/: __init__.py  conversation_utils.py  prompts.py
backend/app/schemas/: conversation.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/api/: api.ts
frontend/src/components/QuestionInput/: QuestionInput.module.css  QuestionInput.tsx
frontend/src/pages/chat/: Chat.module.css  Chat.tsx
frontend/src/pages/layout/: Layout.module.css  Layout.tsx
process_docs/: .env.template  README.md  pyproject.toml
process_docs/src/: main.py
process_docs/src/features/configuration/: __init__.py  settings.py
process_docs/src/features/parsers/: __init__.py  content_management.py  parser.py
process_docs/src/features/splitters/: __init__.py  textsplitter.py
process_docs/src/features/storage/: __init__.py  azure_storage_account.py
