[tool.poetry]
name = "tutoria-api"
version = "0.1.0"
description = ""
authors = ["Sara San Luís Rodríguez, Christian Carballo Lozano"]
readme = "README.md"
keywords = ["tutor.ia", "api"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = "^0.29.0"
openai = "^1.51.0"
python-dotenv = "^1.0.1"
azure-search-documents = "^11.5.1"

[tool.poetry.group.dev.dependencies]
pyclean = "^3.0.0"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"